--- a/deny.toml
+++ b/deny.toml
@@ -67,7 +67,8 @@ license-files=[
   { path="LICENSE", hash=0xbd0eed23 },
 ]
 
-# TODO: We need to remove this once we get licenses up for these crates
+# TODO: Once https://github.com/entropyxyz/constraints/pull/45 is merge and released we can remove
+# this.
 [[licenses.clarify]]
 name         ="ec-core"
 expression   ="AGPL-3.0"
