--- a/crates/threshold-signature-server/Cargo.toml
+++ b/crates/threshold-signature-server/Cargo.toml
@@ -44,8 +44,7 @@ entropy-protocol       ={ path="../protocol", features=["server"] }
 x25519-chacha20poly1305={ git="https://github.com/entropyxyz/x25519-chacha20poly1305.git", tag="v0.2.1" }
 
 # Constraints
-# ec-runtime={ git="ssh://git@github.com/entropyxyz/constraints.git", tag="v0.4.0" }
-ec-runtime={ git="ssh://git@github.com/entropyxyz/constraints.git", branch="add-custom-hash" }
+ec-runtime={ git="ssh://git@github.com/entropyxyz/constraints.git", tag="v0.5.0" }
 
 # Logging
 tracing                 ="0.1.37"
