--- a/crates/threshold-signature-server/Cargo.toml
+++ b/crates/threshold-signature-server/Cargo.toml
@@ -44,7 +44,7 @@ entropy-protocol       ={ path="../protocol", features=["server"] }
 x25519-chacha20poly1305={ git="https://github.com/entropyxyz/x25519-chacha20poly1305.git", tag="v0.2.1" }
 
 # Constraints
-ec-runtime={ git="ssh://git@github.com/entropyxyz/constraints.git", tag="v0.4.0" }
+ec-runtime={ git="ssh://git@github.com/entropyxyz/constraints.git", tag="v0.5.0" }
 
 # Logging
 tracing                 ="0.1.37"
@@ -67,6 +67,8 @@ snow             ="0.9.2"
 sha3             ="0.10.8"
 async-trait      ="0.1.73"
 hostname         ="0.3"
+sha1             ="0.10.6"
+sha2             ="0.10.8"
 
 [dev-dependencies]
 entropy-testing-utils={ path="../testing-utils" }
