--- a/pallets/slashing/Cargo.toml
+++ b/pallets/slashing/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name      ='pallet-slashing'
+name      ='pallet-entropy-slashing'
 version   ='0.0.9'
 authors   =['Entropy Cryptography <engineering@entropy.xyz>']
 homepage  ='https://entropy.xyz/'
