--- a/node/cli/Cargo.toml
+++ b/node/cli/Cargo.toml
@@ -50,10 +50,10 @@ sp-keyring                        ={ version="24.0.0", git='https://github.com/p
 frame-system                      ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
 frame-system-rpc-runtime-api      ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
 pallet-transaction-payment        ={ version="4.0.0-dev", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
-pallet-staking-extension          ={ version="0.0.9", path="../../pallets/staking" }
+pallet-entropy-staking-extension  ={ version="0.0.9", path="../../pallets/staking" }
 pallet-asset-conversion-tx-payment={ version="4.0.0-dev", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
-pallet-free-tx                    ={ version="0.0.9", path="../../pallets/free-tx" }
-pallet-relayer                    ={ version="0.0.9", path="../../pallets/relayer" }
+pallet-entropy-free-tx            ={ version="0.0.9", path="../../pallets/free-tx" }
+pallet-entropy-registry           ={ version="0.0.9", path="../../pallets/registry" }
 node-inspect                      ={ version="0.9.0-dev", optional=true, git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
 substrate-frame-cli               ={ version="4.0.0-dev", optional=true, git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
 sc-sysinfo                        ={ version="6.0.0-dev", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
