--- a/pallets/propagation/Cargo.toml
+++ b/pallets/propagation/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name      ='pallet-propagation'
+name      ='pallet-entropy-propagation'
 version   ='0.0.9'
 authors   =['Entropy Cryptography <engineering@entropy.xyz>']
 homepage  ='https://entropy.xyz/'
@@ -37,10 +37,10 @@ branch          ="polkadot-v1.0.0"
 version         ='4.0.0-dev'
 
 [dependencies]
-pallet-authorship       ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-pallet-relayer          ={ version="0.0.9", default-features=false, path="../relayer" }
-pallet-programs         ={ version="0.0.9", default-features=false, path="../programs" }
-pallet-staking-extension={ version="0.0.9", default-features=false, path="../staking" }
+pallet-authorship               ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
+pallet-entropy-registry         ={ version="0.0.9", default-features=false, path="../registry" }
+pallet-entropy-programs         ={ version="0.0.9", default-features=false, path="../programs" }
+pallet-entropy-staking-extension={ version="0.0.9", default-features=false, path="../staking" }
 
 scale-info           ={ version="2.0.1", default-features=false, features=["derive"] }
 log                  ={ version="0.4.0", default-features=false }
@@ -77,11 +77,11 @@ std=[
   'frame-system/std',
   'frame-benchmarking/std',
   'pallet-authorship/std',
-  'pallet-staking-extension/std',
-  'pallet-programs/std',
+  'pallet-entropy-staking-extension/std',
+  'pallet-entropy-programs/std',
   'pallet-balances/std',
   'pallet-babe/std',
-  'pallet-relayer/std',
+  'pallet-entropy-registry/std',
   "sp-io/std",
   "sp-runtime/std",
   "sp-npos-elections/std",
