--- a/.circleci/then.yml
+++ b/.circleci/then.yml
@@ -118,7 +118,10 @@ jobs:
                   cd ../../..
             - run:
                 command: |
-                    pushd node && cargo build --all-targets --release -j $(nproc) && cargo test --all-targets --release
+                    pushd node
+                    cargo build --all-targets --release -j $(nproc)
+                    cargo test --all-targets --release
+                    yarn --cwd ../crates/protocol/nodejs-test test
                     cargo test -p entropy-tss --release -F wasm_test test_wasm
                 no_output_timeout: 45m
     build-and-release:
