--- a/crates/threshold-signature-server/Cargo.toml
+++ b/crates/threshold-signature-server/Cargo.toml
@@ -38,10 +38,9 @@ parity-scale-codec="3.4.0"
 sp-core           ={ version="21.0.0", default-features=false }
 
 # Entropy
-entropy-shared         ={ path="../shared" }
-entropy-kvdb           ={ path="../kvdb", default-features=false }
-entropy-protocol       ={ path="../protocol", features=["server"] }
-x25519-chacha20poly1305={ git="https://github.com/entropyxyz/x25519-chacha20poly1305.git", tag="v0.2.1" }
+entropy-shared  ={ path="../shared" }
+entropy-kvdb    ={ path="../kvdb", default-features=false }
+entropy-protocol={ path="../protocol", features=["server"] }
 
 # Constraints
 ec-runtime={ git="ssh://git@github.com/entropyxyz/constraints.git", tag="v0.5.0" }
@@ -72,16 +71,14 @@ sha2             ="0.10.8"
 
 [dev-dependencies]
 entropy-testing-utils={ path="../testing-utils" }
-serial_test="0.8.0"
-hex-literal="0.3.4"
-project-root="0.2.2"
-sp-keyring="24.0.0"
-more-asserts="0.3.1"
-template-barebones={ git="ssh://git@github.com/entropyxyz/constraints.git", tag="v0.4.0" }
-lazy_static="1.4.0"
-x25519-chacha20poly1305={ git="https://github.com/entropyxyz/x25519-chacha20poly1305.git", tag="v0.2.1", features=[
-  "unsafe",
-] }
+serial_test          ="0.8.0"
+hex-literal          ="0.3.4"
+project-root         ="0.2.2"
+sp-keyring           ="24.0.0"
+more-asserts         ="0.3.1"
+template-barebones   ={ git="ssh://git@github.com/entropyxyz/constraints.git", tag="v0.4.0" }
+lazy_static          ="1.4.0"
+entropy-protocol     ={ path="../protocol", features=["unsafe"] }
 
 [build-dependencies]
 vergen={ version="8.0.0", features=["build", "git", "gitcl"] }
