--- a/.github/workflows/container-build-and-push.yaml
+++ b/.github/workflows/container-build-and-push.yaml
@@ -99,6 +99,12 @@ jobs:
             cp ${dirname}/${platform}/usr/local/bin/${package} ${artifact_dir}/${package}_${refname}_${platform}
           done
           echo dir="${artifact_dir}" >> $GITHUB_OUTPUT
+      - name: Create genesis runtime bytecode artifcat
+        if: inputs.docker_build_arg_package == 'entropy'
+        run: |
+          ${{ steps.artifacts.outputs.dir }}/${{ inputs.docker_build_arg_package }}_${{ inputs.git_ref_basename }}_linux_amd64 \
+            build-spec --chain testnet --raw \
+              | tee ${{ steps.artifacts.outputs.dir }}/${{ inputs.docker_build_arg_package }}-chain-spec-${{ inputs.git_ref_basename }}-${{ github.sha }}.json
       - name: Upload ${{ inputs.docker_build_arg_package }} binary artifact
         uses: actions/upload-artifact@v3
         with:
