--- a/crates/threshold-signature-server/Cargo.toml
+++ b/crates/threshold-signature-server/Cargo.toml
@@ -43,7 +43,7 @@ entropy-kvdb    ={ path="../kvdb", default-features=false }
 entropy-protocol={ path="../protocol", features=["server"] }
 
 # Programs
-entropy-programs-runtime={ package="ec-runtime", git="https://github.com/entropyxyz/programs.git", tag="v0.5.0" }
+entropy-programs-runtime={ git="https://github.com/entropyxyz/programs.git", tag="v0.7.0" }
 
 # Logging
 tracing                 ="0.1.37"
