--- a/crates/threshold-signature-server/Cargo.toml
+++ b/crates/threshold-signature-server/Cargo.toml
@@ -75,7 +75,7 @@ hex-literal="0.3.4"
 project-root="0.2.2"
 sp-keyring="24.0.0"
 more-asserts="0.3.1"
-template-barebones={ git="ssh://git@github.com/entropyxyz/constraints.git", tag="v0.4.0" }
+template-barebones={ git="https://github.com/entropyxyz/programs.git", tag="v0.4.0" }
 lazy_static="1.4.0"
 x25519-chacha20poly1305={ git="https://github.com/entropyxyz/x25519-chacha20poly1305.git", tag="v0.2.1", features=[
   "unsafe",
