template-barebone dev dependency should also use http version of programs repo and use the same tag

--- a/crates/threshold-signature-server/Cargo.toml
+++ b/crates/threshold-signature-server/Cargo.toml
@@ -76,7 +76,7 @@ hex-literal          ="0.3.4"
 project-root         ="0.2.2"
 sp-keyring           ="24.0.0"
 more-asserts         ="0.3.1"
-template-barebones   ={ git="ssh://git@github.com/entropyxyz/programs.git", tag="v0.5.0" }
+template-barebones   ={ git="https://github.com/entropyxyz/programs.git", tag="v0.7.0" }
 lazy_static          ="1.4.0"
 entropy-protocol     ={ path="../protocol", features=["unsafe"] }
 blake3               ="1.5.0"
