Fix typo in step name.
Co-authored-by: Hernando Castano <HCastano@users.noreply.github.com>

--- a/.github/workflows/container-build-and-push.yaml
+++ b/.github/workflows/container-build-and-push.yaml
@@ -99,7 +99,7 @@ jobs:
             cp ${dirname}/${platform}/usr/local/bin/${package} ${artifact_dir}/${package}_${refname}_${platform}
           done
           echo dir="${artifact_dir}" >> $GITHUB_OUTPUT
-      - name: Create genesis runtime bytecode artifcat
+      - name: Create genesis runtime bytecode artifact
         if: inputs.docker_build_arg_package == 'entropy'
         run: |
           ${{ steps.artifacts.outputs.dir }}/${{ inputs.docker_build_arg_package }}_${{ inputs.git_ref_basename }}_linux_amd64 \
