Update CI for `entropy-tss` + publish runtime bytecode (#582)
* Fix CI to use the new Rust package ID `entropy-tss`.

* Generate a chain spec file during the CI process for each release, as well.

* Fix typo in step name.

Co-authored-by: Hernando Castano <HCastano@users.noreply.github.com>

---------

Co-authored-by: Hernando Castano <HCastano@users.noreply.github.com>

--- a/.github/workflows/container-build-and-push.yaml
+++ b/.github/workflows/container-build-and-push.yaml
@@ -12,7 +12,7 @@ on:
       docker_build_arg_package:
         description: >
           Value of `PACKAGE` to pass to `--build-args`. Expected to
-          be one of `entropy` or `server`.
+          be one of `entropy` or `entropy-tss`.
         type: string
         required: true
       git_ref_basename:
@@ -99,6 +99,12 @@ jobs:
             cp ${dirname}/${platform}/usr/local/bin/${package} ${artifact_dir}/${package}_${refname}_${platform}
           done
           echo dir="${artifact_dir}" >> $GITHUB_OUTPUT
+      - name: Create genesis runtime bytecode artifact
+        if: inputs.docker_build_arg_package == 'entropy'
+        run: |
+          ${{ steps.artifacts.outputs.dir }}/${{ inputs.docker_build_arg_package }}_${{ inputs.git_ref_basename }}_linux_amd64 \
+            build-spec --chain testnet --raw \
+              | tee ${{ steps.artifacts.outputs.dir }}/${{ inputs.docker_build_arg_package }}-chain-spec-${{ inputs.git_ref_basename }}-${{ github.sha }}.json
       - name: Upload ${{ inputs.docker_build_arg_package }} binary artifact
         uses: actions/upload-artifact@v3
         with:
