Updates for renamed `programs` crates / repo (#579)
* Update changed crate name ec-runtime to entropy-programs-runtime

* Change constraints to programs in Makefile, readme and comments

* Update changelog

* change program from ssh to http

* Use soon-to-be-made 0.7.0 tag of entropy-programs-runtime

* Lockfile

* Rm section of Makefile which prepares ssh keys for the programs repo when building API docs, as that repo is now public

* template-barebone dev dependency should also use http version of programs repo and use the same tag

* Use latest `programs` `master` instead of tag

* Remove `clarify` section of `deny.toml`

The new repo should have the license information already.

* Remove `CHANGELOG` entry

* Update test code too

* update tags

* fmt

---------

Co-authored-by: Jesse Abramowitz <jesse@entropy.xyz>
Co-authored-by: Hernando Castano <hernando@hcastano.com>

--- a/deny.toml
+++ b/deny.toml
@@ -37,8 +37,8 @@ exceptions=[
   { allow=["AGPL-3.0"], name="entropy-tss" },
 
   # Other Entropy crates
-  { allow=["AGPL-3.0"], name="ec-core" },
-  { allow=["AGPL-3.0"], name="ec-runtime" },
+  { allow=["AGPL-3.0"], name="entropy-programs-core" },
+  { allow=["AGPL-3.0"], name="entropy-programs-runtime" },
   { allow=["AGPL-3.0"], name="synedrion" },
 
   # These are the only crates using these licenses, put them here instead of globally allowing
@@ -66,15 +66,3 @@ license-files=[
   # Each entry is a crate relative path, and the (opaque) hash of its contents
   { path="LICENSE", hash=0xbd0eed23 },
 ]
-
-# TODO (#567): Once we use a release of the Constraints crates which includes the license
-# information we can get rid of this.
-[[licenses.clarify]]
-name         ="ec-core"
-expression   ="AGPL-3.0"
-license-files=[]
-
-[[licenses.clarify]]
-name         ="ec-runtime"
-expression   ="AGPL-3.0"
-license-files=[]
