Make srtool action more similar to the artifacts example from Chevdor

--- a/.github/workflows/srtool.yml
+++ b/.github/workflows/srtool.yml
@@ -13,15 +13,18 @@ jobs:
       - name: Srtool build
         id: srtool_build
         uses: chevdor/srtool-actions@v0.8.0
-        env:
-          BUILD_OPTS: "--package entropy-runtime"
         with:
           chain: ${{ matrix.chain }}
           runtime_dir: runtime
       - name: Summary
         run: |
-          echo Summary:
-          echo - version: ${{ steps.srtool_build.outputs.version }}
-          echo - info: ${{ steps.srtool_build.outputs.info }}
-          echo - prop: ${{ steps.srtool_build.outputs.proposal_hash }}
-          echo - json: ${{ steps.srtool_build.outputs.json }}
+          echo '${{ steps.srtool_build.outputs.json }}' | jq . > ${{ matrix.chain }}-srtool-digest.json
+          cat ${{ matrix.chain }}-srtool-digest.json
+          echo "Runtime location: ${{ steps.srtool_build.outputs.wasm }}"
+      # - name: Archive Runtime
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: ${{ matrix.chain }}-runtime-${{ github.sha }}
+      #     path: |
+      #       ${{ steps.srtool_build.outputs.wasm }}
+      #       ${{ matrix.chain }}-srtool-digest.json
