--- a/crates/test-cli/Cargo.toml
+++ b/crates/test-cli/Cargo.toml
@@ -18,3 +18,4 @@ tokio                ={ version="1.16", features=["macros", "rt-multi-thread", "
 hex                  ="0.4.3"
 bincode              ="1.3.3"
 x25519-dalek         ="2.0.0"
+blake2               ="0.10.4"
