--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -12,9 +12,12 @@ codec          ={ package="parity-scale-codec", version="3.0.0", default-feature
 scale-info     ={ version='2.0.1', default-features=false, features=['derive'] }
 serde          ={ version="1.0", default-features=false, features=["derive"] }
 serde_derive   ="1.0.147"
-sp-std         ={ package="sp-std", git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0", default-features=false }
-frame-support  ={ package="frame-support", git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0", default-features=false, optional=true }
-node-primitives={ version="2.0.0", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0", optional=true }
+
+sp-std = { package = "sp-std", default-features = false , version = "12.0.0" }
+frame-support = { default-features = false , version = "25.0.0", optional=true }
+# node-primitives={ package ="node-primitives" version="2.0.0", default-features=false, git='https://github.com/paritytech/polkadot-sdk.git', branch="polkadot-v1.3.0", optional=true }
+# TODO (Nando): This is failing to compile....
+# node-primitives={ version="2.0.0", default-features=false, git='https://github.com/paritytech/polkadot-sdk.git', rev="7c9fd83", optional=true }
 
 [features]
 default=["std"]
@@ -24,7 +27,8 @@ std=[
   "serde/std",
   "sp-std/std",
   "frame-support/std",
-  "dep:node-primitives",
+  # "dep:node-primitives",
 ]
 wasm=["codec/std", "scale-info/std", "serde/std", "sp-std/std"]
-wasm-no-std=["frame-support", "dep:node-primitives"]
+# wasm-no-std=["frame-support", "dep:node-primitives"]
+wasm-no-std=["frame-support"]
