--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -14,7 +14,8 @@ serde          ={ version="1.0", default-features=false, features=["derive"] }
 serde_derive   ="1.0.147"
 
 sp-std = { package = "sp-std", default-features = false , version = "12.0.0" }
-frame-support = { default-features = false , version = "25.0.0", optional=true }
+# frame-support = { default-features = false , version = "25.0.0", optional=true }
+sp-runtime    ={ version="28.0.0", default-features=false, optional=true }
 # node-primitives={ package ="node-primitives" version="2.0.0", default-features=false, git='https://github.com/paritytech/polkadot-sdk.git', branch="polkadot-v1.3.0", optional=true }
 # TODO (Nando): This is failing to compile....
 # node-primitives={ version="2.0.0", default-features=false, git='https://github.com/paritytech/polkadot-sdk.git', rev="7c9fd83", optional=true }
@@ -26,9 +27,9 @@ std=[
   "scale-info/std",
   "serde/std",
   "sp-std/std",
-  "frame-support/std",
+  "sp-runtime/std",
   # "dep:node-primitives",
 ]
 wasm=["codec/std", "scale-info/std", "serde/std", "sp-std/std"]
 # wasm-no-std=["frame-support", "dep:node-primitives"]
-wasm-no-std=["frame-support"]
+wasm-no-std=["sp-runtime"]
