--- a/pallets/programs/Cargo.toml
+++ b/pallets/programs/Cargo.toml
@@ -11,49 +11,25 @@ publish   =false
 [package.metadata.docs.rs]
 targets=['x86_64-unknown-linux-gnu']
 
-[dev-dependencies.sp-core]
-default-features=false
-git             ='https://github.com/paritytech/substrate.git'
-branch          ="polkadot-v1.0.0"
-version         ='21.0.0'
-
-[dependencies.codec]
-default-features=false
-features        =['derive']
-package         ='parity-scale-codec'
-version         ='3.0.0'
-
-[dependencies.frame-benchmarking]
-default-features=false
-git             ='https://github.com/paritytech/substrate.git'
-branch          ="polkadot-v1.0.0"
-optional        =true
-version         ='4.0.0-dev'
-
-[dependencies.frame-support]
-default-features=false
-git             ='https://github.com/paritytech/substrate.git'
-branch          ="polkadot-v1.0.0"
-version         ='4.0.0-dev'
-
-[dependencies.frame-system]
-default-features=false
-git             ='https://github.com/paritytech/substrate.git'
-branch          ="polkadot-v1.0.0"
-version         ='4.0.0-dev'
-
 [dependencies]
+codec             ={ package="parity-scale-codec", version="3.6.3", default-features=false, features =["derive"] }
+scale-info        ={ version="2.1", default-features=false, features=["derive"] }
 
-scale-info    ={ version="2.0.1", default-features=false, features=["derive"] }
+frame-benchmarking = { default-features = false, optional = true , version = "25.0.0" }
+frame-support = { default-features = false , version = "25.0.0" }
+frame-system = { default-features = false , version = "25.0.0" }
+
 log           ={ version="0.4.0", default-features=false }
-sp-staking    ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-sp-io         ={ version="23.0.0", default-features=false, git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
-sp-runtime    ={ version="24.0.0", default-features=false, git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
-sp-std        ={ package="sp-std", git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0", default-features=false }
+sp-staking    ={ version="23.0.0", default-features=false }
+sp-io = { default-features = false , version = "27.0.0" }
+sp-runtime    ={ version="28.0.0", default-features=false }
+sp-std        ={ package="sp-std", version="12.0.0", default-features=false }
+
 entropy-shared={ path="../../crates/shared", default-features=false, features=["wasm-no-std"] }
 
 [dev-dependencies]
-pallet-balances={ version="4.0.0-dev", git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
+pallet-balances = { version = "25.0.0" }
+sp-core       ={ version="25.0.0", default-features=false }
 
 [features]
 default=['std']
