--- a/pallets/staking/Cargo.toml
+++ b/pallets/staking/Cargo.toml
@@ -77,7 +77,7 @@ pallet-timestamp = { default-features = false , version = "24.0.0" }
 frame-election-provider-support = { default-features = false , version = "25.0.0" }
 # pallet-session                 ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
 # sp-staking                     ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
-pallet-staking-reward-curve    ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
+pallet-staking-reward-curve = { version = "10.0.0" }
 pallet-bags-list = { default-features = false , version = "24.0.0" }
 sp-npos-elections = { default-features = false , version = "23.0.0" }
 sp-io = { default-features = false , version = "27.0.0" }
