--- a/pallets/free-tx/Cargo.toml
+++ b/pallets/free-tx/Cargo.toml
@@ -11,29 +11,32 @@ publish   =false
 [dependencies]
 codec             ={ package="parity-scale-codec", version="3.6.3", default-features=false }
 scale-info        ={ version="2.1.1", default-features=false, features=["derive"] }
-sp-runtime        ={ git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0", default-features=false }
-sp-staking        ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-frame-benchmarking={ git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0", optional=true, default-features=false }
-frame-support     ={ git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0", default-features=false }
-frame-system      ={ git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0", default-features=false }
-pallet-staking    ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-sp-std            ={ git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0", default-features=false }
+
+sp-runtime    ={ version="28.0.0", default-features=false }
+sp-staking    ={ version="23.0.0", default-features=false }
+frame-benchmarking = { default-features = false, optional = true , version = "25.0.0" }
+frame-support = { default-features = false , version = "25.0.0" }
+frame-system = { default-features = false , version = "25.0.0" }
+pallet-staking={ version="25.0.0", default-features=false }
+sp-std        ={ package="sp-std", version="12.0.0", default-features=false }
+
 log               ={ version="0.4.0", default-features=false }
 
 [dev-dependencies]
-sp-core                        ={ version="21.0.0", git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
-sp-io                          ={ git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
-pallet-balances                ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-pallet-session                 ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-pallet-timestamp               ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-pallet-bags-list               ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-pallet-staking-reward-curve    ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-sp-npos-elections              ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-frame-election-provider-support={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
+sp-core       ={ version="25.0.0", default-features=false }
+sp-io = { default-features = false , version = "27.0.0" }
+sp-tracing = { default-features = false , version = "14.0.0" }
+sp-npos-elections = { default-features = false , version = "23.0.0" }
+pallet-balances = { default-features = false , version = "25.0.0" }
+pallet-session={ version="25.0.0", default-features=false }
+pallet-timestamp = { default-features = false , version = "24.0.0" }
+pallet-bags-list = { default-features = false , version = "24.0.0" }
+pallet-staking-reward-curve = { version = "10.0.0" }
+frame-election-provider-support = { default-features = false , version = "25.0.0" }
+
 pallet-staking-extension       ={ version="0.0.9", default-features=false, path="../staking" }
 pallet-relayer                 ={ version="0.0.9", default-features=false, path="../relayer" }
-pallet-authorship              ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-sp-tracing                     ={ version="10.0.0", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
+pallet-authorship = { default-features = false , version = "25.0.0" }
 
 [features]
 default=["std"]
@@ -48,6 +51,7 @@ std=[
   "frame-support/std",
   "frame-system/std",
   "sp-staking/std",
+  "pallet-relayer/std",
   "pallet-staking/std",
   'pallet-staking-extension/std',
   "pallet-balances/std",
