--- a/pallets/propagation/Cargo.toml
+++ b/pallets/propagation/Cargo.toml
@@ -11,60 +11,39 @@ publish   =false
 [package.metadata.docs.rs]
 targets=['x86_64-unknown-linux-gnu']
 
-[dependencies.codec]
-default-features=false
-features        =['derive']
-package         ='parity-scale-codec'
-version         ='3.0.0'
-
-[dependencies.frame-benchmarking]
-default-features=false
-git             ='https://github.com/paritytech/substrate.git'
-branch          ="polkadot-v1.0.0"
-optional        =true
-version         ='4.0.0-dev'
-
-[dependencies.frame-support]
-default-features=false
-git             ='https://github.com/paritytech/substrate.git'
-branch          ="polkadot-v1.0.0"
-version         ='4.0.0-dev'
-
-[dependencies.frame-system]
-default-features=false
-git             ='https://github.com/paritytech/substrate.git'
-branch          ="polkadot-v1.0.0"
-version         ='4.0.0-dev'
-
 [dependencies]
-pallet-authorship       ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
+pallet-authorship = { default-features = false , version = "25.0.0" }
 pallet-relayer          ={ version="0.0.9", default-features=false, path="../relayer" }
 pallet-programs         ={ version="0.0.9", default-features=false, path="../programs" }
 pallet-staking-extension={ version="0.0.9", default-features=false, path="../staking" }
+frame-benchmarking = { default-features = false, optional = true , version = "25.0.0" }
+frame-support = { default-features = false , version = "25.0.0" }
+frame-system = { default-features = false , version = "25.0.0" }
 
-scale-info           ={ version="2.0.1", default-features=false, features=["derive"] }
+codec             ={ package="parity-scale-codec", version="3.6.3", default-features=false, features =["derive"] }
+scale-info        ={ version="2.1", default-features=false, features=["derive"] }
+
 log                  ={ version="0.4.0", default-features=false }
-sp-staking           ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-sp-io                ={ version="23.0.0", default-features=false, git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
+sp-staking    ={ version="23.0.0", default-features=false }
+sp-io = { default-features = false , version = "27.0.0" }
 lite-json            ={ version="0.1", default-features=false }
-sp-runtime           ={ version="24.0.0", default-features=false, git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
-sp-core              ={ version="21.0.0", default-features=false, git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
+sp-runtime    ={ version="28.0.0", default-features=false }
+sp-core       ={ version="25.0.0", default-features=false }
 entropy-shared       ={ path="../../crates/shared", default-features=false, features=["wasm-no-std"] }
-sp-application-crypto={ version="23.0.0", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
+sp-application-crypto = { default-features = false , version = "27.0.0" }
 
 [dev-dependencies]
-sp-keystore                    ={ version="0.27.0", git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
+sp-keystore                    ={ version="0.31.0" }
 parking_lot                    ="0.11.2"
-pallet-staking                 ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-sp-staking                     ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-pallet-timestamp               ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-frame-election-provider-support={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-pallet-balances                ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-pallet-staking-reward-curve    ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-pallet-session                 ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-pallet-babe                    ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-sp-npos-elections              ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-pallet-bags-list               ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
+pallet-staking={ version="25.0.0", default-features=false }
+pallet-timestamp = { default-features = false , version = "24.0.0" }
+frame-election-provider-support = { default-features = false , version = "25.0.0" }
+pallet-balances = { default-features = false , version = "25.0.0" }
+pallet-staking-reward-curve = { version = "10.0.0" }
+pallet-session={ version="25.0.0", default-features=false }
+pallet-babe = { default-features = false , version = "25.0.0" }
+sp-npos-elections = { default-features = false , version = "23.0.0" }
+pallet-bags-list = { default-features = false , version = "24.0.0" }
 
 [features]
 default=['std']
