--- a/pallets/slashing/Cargo.toml
+++ b/pallets/slashing/Cargo.toml
@@ -11,54 +11,32 @@ publish   =false
 [package.metadata.docs.rs]
 targets=['x86_64-unknown-linux-gnu']
 
-[dev-dependencies.sp-core]
-default-features=false
-git             ='https://github.com/paritytech/substrate.git'
-branch          ="polkadot-v1.0.0"
-version         ='21.0.0'
-
-[dependencies.codec]
-default-features=false
-features        =['derive']
-package         ='parity-scale-codec'
-version         ='3.0.0'
-
-[dependencies.frame-benchmarking]
-default-features=false
-git             ='https://github.com/paritytech/substrate.git'
-branch          ="polkadot-v1.0.0"
-optional        =true
-version         ='4.0.0-dev'
-
-[dependencies.frame-support]
-default-features=false
-git             ='https://github.com/paritytech/substrate.git'
-branch          ="polkadot-v1.0.0"
-version         ='4.0.0-dev'
-
-[dependencies.frame-system]
-default-features=false
-git             ='https://github.com/paritytech/substrate.git'
-branch          ="polkadot-v1.0.0"
-version         ='4.0.0-dev'
-
 [dependencies]
-scale-info           ={ version="2.0.1", default-features=false, features=["derive"] }
+codec             ={ package="parity-scale-codec", version="3.6.3", default-features=false, features =["derive"] }
+scale-info        ={ version="2.1", default-features=false, features=["derive"] }
+
 log                  ={ version="0.4.0", default-features=false }
-sp-staking           ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-sp-io                ={ version="23.0.0", default-features=false, git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
-sp-runtime           ={ version="24.0.0", default-features=false, git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
-sp-application-crypto={ version="23.0.0", default-features=false, git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
+sp-staking    ={ version="23.0.0", default-features=false }
+sp-io = { default-features = false , version = "27.0.0" }
+sp-runtime    ={ version="28.0.0", default-features=false }
+sp-application-crypto = { default-features = false , version = "27.0.0" }
+sp-std        ={ package="sp-std", version="12.0.0", default-features=false }
+
+frame-benchmarking = { default-features = false, optional = true , version = "25.0.0" }
+frame-support = { default-features = false , version = "25.0.0" }
+frame-system = { default-features = false , version = "25.0.0" }
 
 [dev-dependencies]
-pallet-session                 ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-pallet-staking-reward-curve    ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-frame-election-provider-support={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-pallet-timestamp               ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-pallet-staking                 ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-pallet-balances                ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-pallet-bags-list               ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-sp-npos-elections              ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
+pallet-session={ version="25.0.0", default-features=false }
+pallet-staking-reward-curve = { version = "10.0.0", default-features=false }
+frame-election-provider-support = { default-features = false , version = "25.0.0" }
+pallet-timestamp = { default-features = false , version = "24.0.0" }
+pallet-staking={ version="25.0.0", default-features=false }
+pallet-balances = { default-features = false , version = "25.0.0" }
+pallet-bags-list = { default-features = false , version = "24.0.0" }
+sp-npos-elections = { default-features = false , version = "23.0.0" }
+
+sp-core       ={ version="25.0.0", default-features=false }
 
 [features]
 default=['std']
@@ -72,6 +50,7 @@ std=[
   'frame-system/std',
   'frame-benchmarking/std',
   "sp-io/std",
+  "sp-std/std",
   "sp-runtime/std",
   "sp-npos-elections/std",
   "pallet-staking/std",
