--- a/pallets/transaction-pause/Cargo.toml
+++ b/pallets/transaction-pause/Cargo.toml
@@ -9,20 +9,20 @@ edition   ='2021'
 publish   =false
 
 [dependencies]
-codec             ={ package="parity-scale-codec", version="3.6.3", default-features=false }
+codec             ={ package="parity-scale-codec", version="3.6.3", default-features=false, features =["derive"] }
 scale-info        ={ version="2.1", default-features=false, features=["derive"] }
-sp-runtime        ={ git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0", default-features=false }
-frame-benchmarking={ git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0", optional=true, default-features=false }
-frame-support     ={ git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0", default-features=false }
-frame-system      ={ git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0", default-features=false }
-sp-std            ={ git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0", default-features=false }
+sp-runtime    ={ version="28.0.0", default-features=false }
+frame-benchmarking = { default-features = false, optional = true , version = "25.0.0" }
+frame-support = { default-features = false , version = "25.0.0" }
+frame-system = { default-features = false , version = "25.0.0" }
+sp-std        ={ package="sp-std", version="12.0.0", default-features=false }
 
 [dev-dependencies]
-pallet-balances={ git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
+pallet-balances = { version = "25.0.0" }
 pallet-programs={ version="0.0.9", default-features=false, path="../programs" }
 smallvec       ="1.4.1"
-sp-core        ={ version="21.0.0", git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
-sp-io          ={ git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
+sp-core       ={ version="25.0.0" }
+sp-io = { version = "27.0.0" }
 
 [features]
 default=["std"]
