--- a/crates/shared/Cargo.toml
+++ b/crates/shared/Cargo.toml
@@ -15,6 +15,8 @@ serde_derive   ="1.0.147"
 sp-std         ={ package="sp-std", git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0", default-features=false }
 frame-support  ={ package="frame-support", git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0", default-features=false, optional=true }
 node-primitives={ version="2.0.0", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0", optional=true }
+strum          ="0.25.0"
+strum_macros   ="0.25.3"
 
 [features]
 default=["std"]
