--- a/crates/threshold-signature-server/Cargo.toml
+++ b/crates/threshold-signature-server/Cargo.toml
@@ -22,6 +22,7 @@ hex                ="*"
 reqwest-eventsource="0.4"
 serde_derive       ="1.0.147"
 synedrion          ="0.1"
+strum              ="0.25.0"
 
 # Async
 futures="0.3"
