--- a/node/cli/Cargo.toml
+++ b/node/cli/Cargo.toml
@@ -25,7 +25,7 @@ codec                             ={ package="parity-scale-codec", version="3.0.
 structopt                         ='0.3.8'
 grandpa-primitives                ={ version="4.0.0-dev", package="sp-consensus-grandpa", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
 hex-literal                       ="0.3.1"
-pallet-im-online = { default-features = false , version = "24.0.0" }
+pallet-im-online = { version = "24.0.0" }
 sc-chain-spec = { version = "24.0.0" }
 serde                             ={ version="1.0.126", features=["derive"] }
 sp-authority-discovery = { version = "23.0.0" }
@@ -76,27 +76,8 @@ sc-storage-monitor                ={ version="0.13.0" }
 # pallet-asset-tx-payment           ={ version="25.0.0" }
 
 sc-offchain = { version = "26.0.0" }
+
 entropy-shared                    ={ path="../../crates/shared", default-features=false, features=["wasm-no-std"] }
-
-[build-dependencies]
-clap                        ={ version="4.2.5", optional=true }
-clap_complete               ={ version="3.0", optional=true }
-
-# TODO(Nando): Might be able to get rid of this since it's also in main deps
-node-inspect                      ={ version="0.9.0", package="staging-node-inspect", optional=true }
-
-substrate-build-script-utils = { version = "9.0.0" }
-
-# TODO(Nando): Might be able to get rid of this
-# substrate-frame-cli               ={ version="29.0.0", optional=true }
-
-try-runtime-cli = { version = "0.35.0" }
-
-# TODO(Nando): Might be able to get rid of this since it's also in main deps
-# sc-cli                            ={ version="0.33.0", optional=true }
-
-pallet-balances = { version = "25.0.0" }
-
 entropy-runtime = { version = "0.0.9", path = "../../runtime" }
 
 frame-benchmarking = { version = "25.0.0" }
@@ -120,6 +101,26 @@ sp-core = { version = "25.0.0" }
 sp-runtime = { version = "28.0.0" }
 sp-timestamp = { version = "23.0.0" }
 substrate-frame-rpc-system = { version = "25.0.0" }
+
+[build-dependencies]
+clap                        ={ version="4.2.5", optional=true }
+clap_complete               ={ version="3.0", optional=true }
+
+# TODO(Nando): Might be able to get rid of this since it's also in main deps
+node-inspect                      ={ version="0.9.0", package="staging-node-inspect", optional=true }
+
+substrate-build-script-utils = { version = "9.0.0" }
+
+# TODO(Nando): Might be able to get rid of this
+# substrate-frame-cli               ={ version="29.0.0", optional=true }
+
+try-runtime-cli = { version = "0.35.0" }
+
+# TODO(Nando): Might be able to get rid of this since it's also in main deps
+# sc-cli                            ={ version="0.33.0", optional=true }
+
+pallet-balances = { version = "25.0.0" }
+
 
 # TODO(Nando): Might be able to get rid of this
 # sc-consensus-aura = { version = "0.31.0" }
