--- a/node/cli/Cargo.toml
+++ b/node/cli/Cargo.toml
@@ -23,7 +23,7 @@ lazy_static                       ={ version="1.4.0", features=["spin_no_std"] }
 clap                              ={ version="4.0.9", features=["derive"], optional=true }
 codec                             ={ package="parity-scale-codec", version="3.0.0" }
 structopt                         ='0.3.8'
-grandpa-primitives                ={ version="4.0.0-dev", package="sp-consensus-grandpa", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
+grandpa-primitives                ={ version="10.0.0", package="sp-consensus-grandpa" }
 hex-literal                       ="0.3.1"
 pallet-im-online = { version = "24.0.0" }
 sc-chain-spec = { version = "24.0.0" }
